--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -3,153 +3,72 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin - Centro de Compras</title>
   <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
     script-src 'self' 'unsafe-inline';
     style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
     img-src 'self' data: https://drive.google.com https://*.googleusercontent.com;
     font-src 'self' https://fonts.gstatic.com;
-    connect-src 'self' https://centro-de-compras-api-nine.vercel.app;
+    connect-src 'self' https://api-centro-de-compras.onrender.com;
   ">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-    body {
-      font-family: 'Roboto', Arial, sans-serif;
-      background-color: #f5f5f5;
-      color: #333;
-      line-height: 1.6;
-      padding: 15px;
-    }
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    h1 {
-      color: #2E8B57;
-      text-align: center;
-      font-size: 1.8em;
-      margin-bottom: 20px;
-    }
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-    label {
-      font-weight: bold;
-      color: #333;
-      font-size: 0.9em;
-    }
-    input, select, textarea {
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      font-size: 0.9em;
-      width: 100%;
-    }
-    input[type="file"] {
-      padding: 5px;
-    }
-    button {
-      background: #FFA500;
-      color: #fff;
-      padding: 10px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 0.9em;
-      transition: background-color 0.2s;
-    }
-    button:hover {
-      background: #e69500;
-    }
-    #feedback {
-      text-align: center;
-      font-weight: bold;
-      font-size: 0.9em;
-      margin-top: 10px;
-    }
-    #imagens-preview {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-    }
-    #imagens-preview img {
-      max-width: 100px;
-      border-radius: 4px;
-    }
-    @media (max-width: 600px) {
-      .container {
-        padding: 10px;
-      }
-      h1 {
-        font-size: 1.5em;
-      }
-      input, select, textarea, button {
-        font-size: 0.85em;
-      }
-    }
-  </style>
+  <title>Painel Administrativo - Centro de Compras</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <div class="container">
-    <h1>Adicionar/Editar Produto</h1>
-    <form id="produto-form">
-      <label for="nome">Nome do Produto:</label>
-      <input type="text" id="nome" name="nome" required>
-      <label for="descricao">Descrição:</label>
-      <textarea id="descricao" name="descricao" rows="4" required></textarea>
-      <label for="categoria">Categoria:</label>
-      <select id="categoria" name="categoria" required>
-        <option value="eletronicos">Eletrônicos</option>
-        <option value="moda">Moda</option>
-        <option value="fitness">Fitness</option>
-        <option value="casa">Casa</option>
-        <option value="beleza">Beleza</option>
-        <option value="esportes">Esportes</option>
-        <option value="livros">Livros</option>
-        <option value="infantil">Infantil</option>
-        <option value="celulares">Celulares</option>
-        <option value="eletrodomesticos">Eletrodomésticos</option>
-        <option value="pet">Pet</option>
-        <option value="jardinagem">Jardinagem</option>
-        <option value="automotivo">Automotivo</option>
-        <option value="gastronomia">Gastronomia</option>
-        <option value="games">Games</option>
-      </select>
-      <label for="loja">Loja:</label>
-      <select id="loja" name="loja" required>
-        <option value="amazon">Amazon</option>
-        <option value="magalu">Magalu</option>
-        <option value="shein">Shein</option>
-        <option value="shopee">Shopee</option>
-        <option value="mercadolivre">Mercado Livre</option>
-        <option value="alibaba">Alibaba</option>
-      </select>
-      <label for="link">Link do Produto:</label>
-      <input type="url" id="link" name="link" required>
-      <label for="preco">Preço (R$):</label>
-      <input type="number" id="preco" name="preco" step="0.01" required>
-      <label for="imagens">Imagens:</label>
-      <input type="file" id="imagens" name="imagens" accept="image/*" multiple>
-      <div id="imagens-preview"></div>
-      <input type="hidden" id="rowIndex" name="rowIndex">
-      <button type="submit">Salvar Produto</button>
-    </form>
-    <div id="feedback"></div>
-  </div>
+  <header>
+    <div class="container">
+      <h1>Painel Administrativo</h1>
+      <a href="/index.html">Voltar ao Site</a>
+    </div>
+  </header>
+  <main>
+    <div class="container">
+      <form id="produto-form">
+        <h2>Adicionar/Editar Produto</h2>
+        <label for="nome">Nome do Produto:</label>
+        <input type="text" id="nome" name="nome" required>
+        <label for="descricao">Descrição:</label>
+        <textarea id="descricao" name="descricao"></textarea>
+        <label for="categoria">Categoria:</label>
+        <select id="categoria" name="categoria" required>
+          <option value="eletronicos">Eletrônicos</option>
+          <option value="roupas">Roupas</option>
+          <option value="casa">Casa</option>
+          <option value="esportes">Esportes</option>
+        </select>
+        <label for="loja">Loja:</label>
+        <select id="loja" name="loja" required>
+          <option value="amazon">Amazon</option>
+          <option value="magalu">Magalu</option>
+          <option value="shein">Shein</option>
+          <option value="shopee">Shopee</option>
+          <option value="mercadolivre">Mercado Livre</option>
+          <option value="alibaba">Alibaba</option>
+        </select>
+        <label for="link">Link do Produto:</label>
+        <input type="url" id="link" name="link" required>
+        <label for="preco">Preço (R$):</label>
+        <input type="number" id="preco" name="preco" step="0.01" required>
+        <label for="imagens">Imagens:</label>
+        <input type="file" id="imagens" name="imagens" accept="image/*" multiple>
+        <div id="imagens-preview"></div>
+        <input type="hidden" id="rowIndex" name="rowIndex">
+        <button type="submit">Salvar Produto</button>
+        <p id="feedback"></p>
+      </form>
+    </div>
+  </main>
+  <footer>
+    <div class="container">
+      <p>&copy; <span id="year"></span> Centro de Compras. Todos os direitos reservados.</p>
+    </div>
+  </footer>
   <script>
-    const BACKEND_URL = 'https://centro-de-compras-api-nine.vercel.app/api/produtos';
+    const BACKEND_URL = 'https://api-centro-de-compras.onrender.com/api/produtos';
+
+    // Atualizar ano no footer
+    document.getElementById('year').textContent = new Date().getFullYear();
 
     // Verificar autenticação
     const senhaCorreta = 'sua-senha-forte-123'; // Substitua por uma senha forte
