--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -65,7 +65,7 @@
     </div>
   </footer>
   <script>
-    const BACKEND_URL = 'https://api-centro-de-compras.onrender.com/api/produtos';
+    const BACKEND_URL = 'https://api-centro-de-compras.onrender.com';
 
     // Atualizar ano no footer
     document.getElementById('year').textContent = new Date().getFullYear();
