--- a/admin-xyz-123.html
+++ b/admin-xyz-123.html
@@ -61,7 +61,7 @@
   </main>
   <footer>
     <div class="container">
-      <p>&copy; <span id="year"></span> Centro de Compras. Todos os direitos reservados.</p>
+      <p>© <span id="year"></span> Centro de Compras. Todos os direitos reservados.</p>
     </div>
   </footer>
   <script>
